# deferred_vector

./: Cargo.toml  README.md
src/: lib.rs
