[package]
name = "deferred_vector"
version = "0.1.0"
edition = "2021"
description = "A deferred vector implementation"
repository = "https://github.com/afmiguel/deffered_vector"
readme = "README.md"
keywords = ["canvas", "lms", "api", "connector", "rust"]
categories = ["web-programming", "network-programming", "education", "canvas", "lms", "api", "connector", "rust"]
authors = ["Prof. Afonso Miguel - PUCPR"]
documentation = "https://docs.rs/canvas_lms_connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
