[package]
name = "deferred_vector"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A deferred vector implementation"
repository = "https://github.com/afmiguel/deffered_vector"
readme = "README.md"
keywords = ["deferred", "vector", "rust", "rust-lang",]
categories = ["data-structures", "algorithms", "rust-lang", "rust"]
authors = ["Prof. Afonso Miguel - PUCPR"]
documentation = ""

[dependencies]
